[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/LevelUI/GameOver.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="TryAgainBtn" type="Button" parent="."]
margin_left = 73.0754
margin_top = 272.143
margin_right = 255.075
margin_bottom = 335.143
text = "Try again"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChooseLvlBtn" type="Button" parent="."]
margin_left = 309.94
margin_top = 269.623
margin_right = 481.94
margin_bottom = 335.623
text = "Choose Level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuBtn" type="Button" parent="."]
margin_left = 529.167
margin_top = 268.363
margin_right = 691.167
margin_bottom = 335.363
text = "Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitBtn" type="Button" parent="."]
margin_left = 757.212
margin_top = 263.323
margin_right = 923.212
margin_bottom = 336.323
text = "Exit Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 365.978
margin_top = 72.1588
margin_right = 442.978
margin_bottom = 89.1588
rect_scale = Vector2( 3, 3 )
text = "Game Over!"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="TryAgainBtn" to="." method="_on_TryAgainBtn_pressed"]
[connection signal="pressed" from="ChooseLvlBtn" to="." method="_on_ChooseLvlBtn_pressed"]
[connection signal="pressed" from="MainMenuBtn" to="." method="_on_MainMenuBtn_pressed"]
[connection signal="pressed" from="ExitBtn" to="." method="_on_ExitBtn_pressed"]
